# CSC200H-PawlikiBox

./: .gitignore  README.md  lib_fromEliza.rs
chatbot/: Cargo.toml
chatbot/data/: db.json
chatbot/scripts/: course.json
chatbot/src/: alphabet.rs  database.rs  lib.rs  main.rs  script.rs
pawliki/: .gitignore  Cargo.toml  list_of_questions.txt
pawliki/db/: db.json
pawliki/scripts/: course.json  doctor.json
pawliki/src/: database.rs  db.rs  lib.rs  main.rs  script.rs
