[package]
name = "chatbot"
version = "0.1.0"
authors = ["kkao99 <38305127+kkao99@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "^1.0"
log = "^0.4"
env_logger = "^0.7"
