[package]
name = "pawliki"
version = "0.1.0"
authors = ["yzh223"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eliza = "2.0.0"
regex = "^1.3"
rand = "^0.7"
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
log = "^0.4"
env_logger = "^0.7"